[gd_scene load_steps=44 format=3 uid="uid://dqeoqxeec5qlj"]

[ext_resource type="Texture2D" uid="uid://ctwlt6sj20hvb" path="res://Graphics/enemies/bug/attack/00010.png" id="1_f776o"]
[ext_resource type="Script" path="res://Scenes/Enemies/Bug.gd" id="1_gky3o"]
[ext_resource type="Shader" path="res://Scenes/Enemies/Bug.gdshader" id="2_7ik63"]
[ext_resource type="Texture2D" uid="uid://coi18kxh61gs8" path="res://Graphics/enemies/bug/attack/00011.png" id="2_oq3nd"]
[ext_resource type="Texture2D" uid="uid://kep6pb6ani5j" path="res://Graphics/enemies/bug/attack/00012.png" id="3_ye2la"]
[ext_resource type="Texture2D" uid="uid://d20w8ej3ktwxi" path="res://Graphics/enemies/bug/attack/00013.png" id="4_c2yg4"]
[ext_resource type="Texture2D" uid="uid://b75n4qkabwn4p" path="res://Graphics/enemies/bug/attack/00014.png" id="5_olyyg"]
[ext_resource type="Texture2D" uid="uid://d3cww3lt8fq8s" path="res://Graphics/enemies/bug/attack/00015.png" id="6_jin7o"]
[ext_resource type="Texture2D" uid="uid://2fi1wstec88h" path="res://Graphics/enemies/bug/attack/00016.png" id="7_5wwgy"]
[ext_resource type="Texture2D" uid="uid://ds1xewmcw7v3v" path="res://Graphics/enemies/bug/attack/00017.png" id="8_arfrx"]
[ext_resource type="Texture2D" uid="uid://jyrcwaq4j652" path="res://Graphics/enemies/bug/attack/00018.png" id="9_ocdej"]
[ext_resource type="Texture2D" uid="uid://c8ajbwv3o4vcc" path="res://Graphics/enemies/bug/attack/00019.png" id="10_b233s"]
[ext_resource type="Texture2D" uid="uid://cfgta2awjf5th" path="res://Graphics/enemies/bug/attack/00020.png" id="11_q3pd4"]
[ext_resource type="Texture2D" uid="uid://b7p7jn6m8eten" path="res://Graphics/enemies/bug/attack/00021.png" id="12_rna12"]
[ext_resource type="Texture2D" uid="uid://ck56gnvo671yb" path="res://Graphics/enemies/bug/attack/00022.png" id="13_d0ffl"]
[ext_resource type="Texture2D" uid="uid://dchgcmakpgy8j" path="res://Graphics/enemies/bug/attack/00023.png" id="14_hurke"]
[ext_resource type="Texture2D" uid="uid://cp1jafwwrqmjl" path="res://Graphics/enemies/bug/attack/00024.png" id="15_01usl"]
[ext_resource type="Texture2D" uid="uid://doj7sn4vu5s85" path="res://Graphics/enemies/bug/attack/00025.png" id="16_hibh2"]
[ext_resource type="Texture2D" uid="uid://cx3qyo3bo4li6" path="res://Graphics/enemies/bug/attack/00026.png" id="17_m331x"]
[ext_resource type="Texture2D" uid="uid://ddalef8uqlhnc" path="res://Graphics/enemies/bug/attack/00027.png" id="18_dqvuq"]
[ext_resource type="Texture2D" uid="uid://bef1avgcmw2ym" path="res://Graphics/enemies/bug/attack/00028.png" id="19_2b8ns"]
[ext_resource type="Texture2D" uid="uid://dht6me282gqut" path="res://Graphics/enemies/bug/attack/00029.png" id="20_2tgxe"]
[ext_resource type="Texture2D" uid="uid://d4gxholh4xuf1" path="res://Graphics/enemies/bug/attack/00030.png" id="21_deang"]
[ext_resource type="Texture2D" uid="uid://b7ca4tqb72mp" path="res://Graphics/enemies/bug/walk/00000.png" id="22_sb5pu"]
[ext_resource type="Texture2D" uid="uid://sscvrsl8l7bt" path="res://Graphics/enemies/bug/walk/00001.png" id="23_us600"]
[ext_resource type="Texture2D" uid="uid://kycxk88f80qn" path="res://Graphics/enemies/bug/walk/00002.png" id="24_txn7l"]
[ext_resource type="Texture2D" uid="uid://b0owsx5u848fa" path="res://Graphics/enemies/bug/walk/00003.png" id="25_xlrsq"]
[ext_resource type="Texture2D" uid="uid://dj543lnnvus5o" path="res://Graphics/enemies/bug/walk/00004.png" id="26_qc2kv"]
[ext_resource type="Texture2D" uid="uid://bsb74a3f5qhgq" path="res://Graphics/enemies/bug/walk/00005.png" id="27_3uixo"]
[ext_resource type="Texture2D" uid="uid://uudxpw8kbkh0" path="res://Graphics/enemies/bug/walk/00006.png" id="28_08dhu"]
[ext_resource type="Texture2D" uid="uid://dwqctfqpvrxqo" path="res://Graphics/enemies/bug/walk/00007.png" id="29_b0qfm"]
[ext_resource type="Texture2D" uid="uid://ccgiqver602x2" path="res://Graphics/enemies/bug/walk/00008.png" id="30_ydygh"]
[ext_resource type="Texture2D" uid="uid://bue1hdmuchdix" path="res://Graphics/lights/textures/circle.png" id="32_i1fcd"]
[ext_resource type="Texture2D" uid="uid://dhnphps0van25" path="res://Graphics/explosions/grunge.png" id="34_lt5ov"]
[ext_resource type="AudioStream" uid="uid://c8ch4nynvf46f" path="res://Audio/organic_impact.mp3" id="35_ualtx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wwk8l"]
radius = 966.033

[sub_resource type="CircleShape2D" id="CircleShape2D_vtsjb"]
radius = 99.0202

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qqx6x"]
shader = ExtResource("2_7ik63")
shader_parameter/color = Color(0, 1, 0.388235, 1)
shader_parameter/filter = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ct0ii"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_f776o")
}, {
"duration": 1.0,
"texture": ExtResource("2_oq3nd")
}, {
"duration": 1.0,
"texture": ExtResource("3_ye2la")
}, {
"duration": 1.0,
"texture": ExtResource("4_c2yg4")
}, {
"duration": 1.0,
"texture": ExtResource("5_olyyg")
}, {
"duration": 1.0,
"texture": ExtResource("6_jin7o")
}, {
"duration": 1.0,
"texture": ExtResource("7_5wwgy")
}, {
"duration": 1.0,
"texture": ExtResource("8_arfrx")
}, {
"duration": 1.0,
"texture": ExtResource("9_ocdej")
}, {
"duration": 1.0,
"texture": ExtResource("10_b233s")
}, {
"duration": 1.0,
"texture": ExtResource("11_q3pd4")
}, {
"duration": 1.0,
"texture": ExtResource("12_rna12")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0ffl")
}, {
"duration": 1.0,
"texture": ExtResource("14_hurke")
}, {
"duration": 1.0,
"texture": ExtResource("15_01usl")
}, {
"duration": 1.0,
"texture": ExtResource("16_hibh2")
}, {
"duration": 1.0,
"texture": ExtResource("17_m331x")
}, {
"duration": 1.0,
"texture": ExtResource("18_dqvuq")
}, {
"duration": 1.0,
"texture": ExtResource("19_2b8ns")
}, {
"duration": 1.0,
"texture": ExtResource("20_2tgxe")
}, {
"duration": 1.0,
"texture": ExtResource("21_deang")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_sb5pu")
}, {
"duration": 1.0,
"texture": ExtResource("23_us600")
}, {
"duration": 1.0,
"texture": ExtResource("24_txn7l")
}, {
"duration": 1.0,
"texture": ExtResource("25_xlrsq")
}, {
"duration": 1.0,
"texture": ExtResource("26_qc2kv")
}, {
"duration": 1.0,
"texture": ExtResource("27_3uixo")
}, {
"duration": 1.0,
"texture": ExtResource("28_08dhu")
}, {
"duration": 1.0,
"texture": ExtResource("29_b0qfm")
}, {
"duration": 1.0,
"texture": ExtResource("30_ydygh")
}],
"loop": true,
"name": &"walk",
"speed": 30.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5m23v"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_iopx3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xq15r"]
curve = SubResource("Curve_iopx3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yvkiy"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(1, 1, 0)
spread = 156.945
initial_velocity_min = 130.71
initial_velocity_max = 189.54
gravity = Vector3(0, 98, 0)
scale_min = 0.2
scale_max = 0.5
scale_curve = SubResource("CurveTexture_xq15r")
anim_offset_max = 1.0

[node name="Bug" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_gky3o")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PackedVector2Array(-64, 35, -69, 30, -71, 28, -74, 22, -74, 19, -76, 15, -78, 11, -78, 5, -79, -3, -78, -7, -77, -14, -75, -17, -73, -23, -71, -27, -67, -32, -64, -35, -61, -36, -57, -38, -52, -41, -49, -42, -48, -42, -45, -43, -41, -43, -36, -43, -33, -42, -29, -41, -29, -44, -29, -47, -32, -49, -35, -54, -39, -58, -41, -63, -39, -66, -40, -71, -44, -73, -47, -72, -46, -74, -43, -77, -36, -77, -32, -77, -28, -74, -24, -71, -20, -68, -17, -67, -16, -63, -16, -60, -17, -56, -17, -53, -18, -48, -19, -45, -19, -41, -17, -40, -12, -39, -10, -38, -6, -37, 1, -34, 6, -31, 8, -29, 11, -28, 14, -29, 14, -34, 16, -39, 18, -43, 20, -46, 22, -48, 25, -50, 28, -49, 29, -48, 36, -49, 42, -48, 47, -46, 50, -44, 47, -44, 42, -41, 38, -37, 37, -35, 39, -35, 36, -33, 32, -30, 29, -29, 25, -28, 23, -27, 23, -25, 22, -24, 24, -23, 27, -23, 28, -24, 30, -23, 32, -23, 33, -22, 34, -21, 40, -20, 41, -19, 42, -17, 43, -16, 44, -15, 48, -14, 50, -15, 51, -18, 54, -19, 56, -22, 58, -23, 61, -23, 66, -22, 72, -19, 76, -17, 76, -16, 73, -17, 67, -16, 62, -15, 61, -13, 59, -14, 56, -11, 58, -9, 60, -6, 61, -2, 65, 0, 61, 2, 60, 6, 57, 11, 59, 13, 60, 13, 62, 12, 63, 14, 67, 15, 73, 16, 78, 15, 75, 17, 67, 21, 61, 22, 58, 23, 57, 21, 51, 17, 51, 14, 48, 13, 44, 14, 43, 16, 43, 20, 41, 21, 38, 22, 36, 22, 34, 23, 34, 24, 32, 24, 30, 25, 26, 24, 25, 25, 23, 26, 22, 28, 23, 29, 23, 30, 27, 31, 30, 32, 33, 34, 37, 37, 39, 37, 37, 39, 39, 41, 43, 45, 49, 47, 50, 47, 46, 49, 41, 51, 36, 51, 29, 51, 28, 51, 27, 52, 26, 53, 23, 53, 20, 49, 16, 43, 15, 40, 14, 36, 14, 31, 13, 30, 10, 32, 7, 35, 2, 38, -4, 41, -6, 41, -8, 39, -10, 40, -13, 42, -20, 43, -19, 46, -18, 47, -18, 50, -17, 52, -17, 55, -16, 59, -17, 62, -17, 66, -19, 68, -21, 69, -26, 72, -31, 76, -37, 77, -42, 77, -45, 76, -47, 72, -44, 73, -41, 72, -39, 69, -40, 64, -40, 60, -36, 54, -33, 50, -30, 47, -29, 47, -29, 43, -29, 42, -33, 44, -37, 44, -40, 44, -44, 45, -48, 44, -52, 43, -57, 40, -59, 38)

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_wwk8l")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_vtsjb")

[node name="Animation" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_qqx6x")
rotation = 1.5708
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_ct0ii")
animation = &"attack"
frame = 20
frame_progress = 1.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(6.99999, 7.00001)
scale = Vector2(0.73625, 0.73625)
color = Color(0, 1, 0.105882, 1)
energy = 0.8
texture = ExtResource("32_i1fcd")

[node name="Timers" type="Node" parent="."]

[node name="AttackCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="HitCooldown" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Particles" type="Node2D" parent="."]

[node name="HitParticles" type="GPUParticles2D" parent="Particles"]
modulate = Color(0, 0.172549, 0.00784314, 0.482353)
material = SubResource("CanvasItemMaterial_5m23v")
position = Vector2(-7, -7)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_yvkiy")
texture = ExtResource("34_lt5ov")
lifetime = 0.7
one_shot = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("35_ualtx")
volume_db = -10.0

[connection signal="body_entered" from="NoticeArea" to="." method="_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_notice_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_attack_area_body_exited"]
[connection signal="animation_finished" from="Animation" to="." method="_animation_finished"]
[connection signal="timeout" from="Timers/AttackCooldown" to="." method="_attack_cooldown_timeout"]
[connection signal="timeout" from="Timers/HitCooldown" to="." method="_hit_cooldown_timeout"]
